# Changelog
All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).


## [2.0.9] - Unreleased
### Changed
- [UPDATE_SYSTEM] Reload Haproxy after an upgrade instead of stopping/starting it
### Added
- [RSYSLOG] [CONFIG] new static ruleset for haproxy global logs parsing and writing
### Fixed
- [LOGROTATE] [CONFIG] Wrong extension '.gz.gz' on logrotated haproxy log files


## [2.0.8] - 2023-01-18
### Fixed
- [UPDATE_SYSTEM] Don't use the jail's hbsd-update.conf file for jail system upgrades
### Changed
- [LOADER] Update zfs options to increase ARC size and increase disk performances


## [2.0.7] - 2022-12-21
### Fixed
- [SCRIPTS] [PROXY.SH] Correctly reload PF configuration when changing proxy settings


## [2.0.6] - 2022-12-15
### Fixed
- [SCRIPTS] [PROXY.SH] Wrong proxy configuration set in pkg.conf
- [SCRIPTS] Remove several references to removed apache24 package


## [2.0.5] - 2022-12-09
### Removed
- [JAIL] [APACHE] Disable and uninstall apache from jail
### Fixed
 [CLUSTER_JOIN] Correctly stop and restart local services during cluster join
 [CLUSTER_JOIN] Correctly add the master's hostname/ip in /etc/hosts
### Added
- [JAIL] [APACHE] Install nginx and gunicorn in the apache jail
- [JAIL] [APACHE] Ensure python is installed in the apache jail
- [SYSTEM] Create a new /var/sockets/gui folder and mount it RW in the apache jail
- [SUDO] Allow vlt-os to manage gunicorn/nginx services
- [UPDATE_SYSTEM] stop gunicorn services before upgrading vulture-gui
### Changed
- [UPDATE_SYSTEM] stop/start/reload nginx/gunicorn during system updates
- [LOGROTATE] reload nginx and gunicorn in the apache jail after rotating gui logs


## [2.0.4] - 2022-11-21
### Added
- [CLOUD_INIT] Default logging configuration
- [SYSTEM] [CSHRC] Additional bindings for terminal manipulation


## [2.0.3] - 2022-11-10