@@ -8,6 +8,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 ## [2.0.9] - Unreleased
 ### Changed
 - [UPDATE_SYSTEM] Reload Haproxy after an upgrade instead of stopping/starting it
+- [SYSTEM] [RC] Set system network config in /etc/rc.conf instead of /etc/rc.conf.d/network
 ### Added
 - [RSYSLOG] [CONFIG] new static ruleset for haproxy global logs parsing and writing
 ### Fixed
